# dedekind_groups

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  justfile  pyproject.toml
.github/workflows/: deploy-pdf.yml
src/: DedekindGroups.jl  DedekindPrinting.jl  main.jl
src/dedekind/: __init__.py
src/experiments/: baer_dedekind.jl
tex/: .latexmkrc  macros.tex  main.tex  preamble.tex  references.bib
