[project]
name = "dedekind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mariovagomarzal", email = "mariovagomarzal@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.6",
]
